--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
     ],
     "require": {
         "illuminate/support": "^9.0|^10.0|^11.0",
-        "reecem/mocker": "^1.2.1",
+        "ysalitrynskyi/mocker": "dev-master",
         "laravel/legacy-factories": "^1.3"
     },
     "require-dev": {
@@ -30,6 +30,12 @@
         "orchestra/testbench": "^7.0",
         "sempro/phpunit-pretty-print": "^1.0"
     },
+    "repositories": [
+        {
+            "type": "git",
+            "url": "https://github.com/ysalitrynskyi/mocker"
+        }
+    ],
     "autoload": {
         "psr-4": {
             "Qoraiche\\MailEclipse\\": "src/"
