--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
     ],
     "require": {
         "illuminate/support": "^9.0|^10.0|^11.0",
-        "ysalitrynskyi/mocker": "dev-master",
+        "ysalitrynskyi/mocker": "master",
         "laravel/legacy-factories": "^1.3"
     },
     "require-dev": {
