--- a/composer.json
+++ b/composer.json
@@ -19,10 +19,16 @@
         "mailable",
         "markdown"
     ],
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/ysalitrynskyi/mocker/"
+        }
+    ],
     "require": {
         "illuminate/support": "^9.0|^10.0|^11.0",
-        "ysalitrynskyi/mocker": "master",
-        "laravel/legacy-factories": "^1.3"
+        "ysalitrynskyi/mocker": "dev-master",
+        "laravel/legacy-factories": "^1.4"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5.10",
@@ -49,11 +55,5 @@
                 "MailEclipse": "Qoraiche\\MailEclipse\\Facades\\MailEclipse"
             }
         }
-    },
-    "repositories": [
-        {
-            "type": "vcs",
-            "url": "https://github.com/ysalitrynskyi/mocker/"
-        }
-    ]
+    }
 }
